--- a/FootLand/templates/vendor_add_product.html
+++ b/FootLand/templates/vendor_add_product.html
@@ -164,21 +164,55 @@
                                     <label for="material" class="form-label">
                                         <i class="fas fa-cube me-2"></i>Material
                                     </label>
-                                    <input type="text" class="form-control" id="material" name="material" required>
+                                    <select class="form-control" id="material" name="material" required>
+                                        <option value="leather">Leather</option>
+                                        <option value="textiles">Textiles</option>
+                                        <option value="synthetics">Synthetics</option>
+                                        <option value="rubber">Rubber</option>
+                                        <option value="foam">Foam</option>
+                                        <option value="plastic">Plastic</option>
+                                    </select>
                                 </div>
 
                                 <div class="mb-4">
                                     <label for="brand" class="form-label">
                                         <i class="fas fa-tag me-2"></i>Brand
                                     </label>
-                                    <input type="text" class="form-control" id="brand" name="brand" required>
+                                    <select class="form-control" id="brand" name="brand" required>
+                                        <option value="adidas">Adidas</option>
+                                        <option value="reebok">Reebok</option>
+                                        <option value="woodland">Woodland</option>
+                                        <option value="skechers">Skechers</option>
+                                        <option value="clarks">Clarks</option>
+                                        <option value="crocs">Crocs</option>
+                                        <option value="red_tape">Red Tape</option>
+                                        <option value="sparx">Sparx</option>
+                                        <option value="liberty">Liberty</option>
+                                        <option value="paragon">Paragon</option>
+                                        <option value="bata">Bata</option>
+                                        <option value="mochi">Mochi</option>
+                                        <option value="metro">Metro</option>
+                                        <option value="marc_loire">Marc Loire</option>
+                                        <option value="shoetopia">Shoetopia</option>
+                                        <option value="xe_looks">XE Looks</option>
+                                        <option value="bata_comfit">Bata Comfit</option>
+                                        <option value="trase">TRASE</option>
+                                        <option value="mosac">MOSAC</option>
+                                    </select>
                                 </div>
 
                                 <div class="mb-4">
                                     <label for="type" class="form-label">
                                         <i class="fas fa-th-list me-2"></i>Type
                                     </label>
-                                    <input type="text" class="form-control" id="type" name="type" required>
+                                    <select class="form-control" id="type" name="type" required>
+                                        <option value="casual_shoes">Casual Shoes</option>
+                                        <option value="formal_shoes">Formal Shoes</option>
+                                        <option value="party_wear">Party Wear</option>
+                                        <option value="heels">Heels</option>
+                                        <option value="slippers">Slippers</option>
+                                        <option value="flats">Flats</option>
+                                    </select>
                                 </div>
 
                                 <div class="mb-4">
@@ -219,7 +253,18 @@
                                     <label for="color" class="form-label">
                                         <i class="fas fa-paint-brush me-2"></i>Color
                                     </label>
-                                    <input type="text" class="form-control" id="color" name="color" required>
+                                    <select class="form-control" id="color" name="color" required>
+                                        <option value="black">Black</option>
+                                        <option value="white">White</option>
+                                        <option value="brown">Brown</option>
+                                        <option value="blue">Blue</option>
+                                        <option value="red">Red</option>
+                                        <option value="green">Green</option>
+                                        <option value="grey">Grey</option>
+                                        <option value="tan">Tan</option>
+                                        <option value="navy">Navy</option>
+                                        <option value="multicolor">Multicolor</option>
+                                    </select>
                                 </div>
 
                                 <div class="mb-4">
