change the css in the vendor_add_product

--- a/FootLand/templates/vendor_add_product.html
+++ b/FootLand/templates/vendor_add_product.html
@@ -217,7 +217,7 @@
 
                                 <div class="mb-4">
                                     <label for="price" class="form-label">
-                                        <i class="fas fa-dollar-sign me-2"></i>Price
+                                        <i class="fas fa-rupee-sign me-2"></i>Price
                                     </label>
                                     <input type="number" class="form-control" id="price" name="price" step="100" required>
                                 </div>
