--- a/FootLand/templates/admin_dashboard.html
+++ b/FootLand/templates/admin_dashboard.html
@@ -182,6 +182,15 @@
                 <li><a href="{% url 'view_vendors' %}"><i class="fas fa-store"></i> Vendors</a></li>
                 <li><a href="{% url 'view_orders' %}"><i class="fas fa-shopping-cart"></i> Orders</a></li>
                 <li><a href="{% url 'analytics' %}"><i class="fas fa-chart-bar"></i> Analytics</a></li>
+                <li class="dropdown">
+                    <a href="#" onclick="toggleDropdown('deliveryDropdown')">
+                        <i class="fas fa-motorcycle"></i> Delivery Boys
+                    </a>
+                    <div id="deliveryDropdown" class="dropdown-content">
+                        <a href="{% url 'add_delivery_boy' %}">Add Delivery Boy</a>
+                        <a href="{% url 'view_delivery_boys' %}">View Delivery Boys</a>
+                    </div>
+                </li>
                 <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </aside>
