--- a/FootLand/templates/vendor_details.html
+++ b/FootLand/templates/vendor_details.html
@@ -109,13 +109,13 @@
             <input type="text" name="location" id="location" required>
             <span class="error-message" id="locationError">Location must contain letters and numbers only, and be a maximum of 20 characters.</span>
 
-            <label for="aadhar_card">Aadhar Card (JPG, PNG, PDF only)</label>
-            <input type="file" name="aadhar_card" id="aadhar_card" required accept=".jpg, .jpeg, .png, .pdf">
-            <span class="error-message" id="aadharCardError">Only JPG, PNG, and PDF files are allowed.</span>
+            <label for="aadhar_card">Aadhar Card (JPG, PNG only)</label>
+            <input type="file" name="aadhar_card" id="aadhar_card" required accept=".jpg, .jpeg, .png">
+            <span class="error-message" id="aadharCardError">Only JPG, PNG,  files are allowed.</span>
 
-            <label for="shop_license">Shop License (JPG, PNG, PDF only)</label>
-            <input type="file" name="shop_license" id="shop_license" required accept=".jpg, .jpeg, .png, .pdf">
-            <span class="error-message" id="shopLicenseError">Only JPG, PNG, and PDF files are allowed.</span>
+            <label for="shop_license">Shop License (JPG, PNG )</label>
+            <input type="file" name="shop_license" id="shop_license" required accept=".jpg, .jpeg, .png">
+            <span class="error-message" id="shopLicenseError">Only JPG, PNG files are allowed.</span>
 
             <label>
                 <input type="checkbox" id="declaration" required> I declare that I am submitting original documents.
@@ -184,8 +184,8 @@
                 errorMessage.style.display = 'block';
             } else {
                 errorMessage.style.display = 'none';
-                if (!/\.(jpg|jpeg|png|pdf)$/i.test(file.name)) {
-                    errorMessage.innerText = 'Only JPG, PNG, and PDF files are allowed.';
+                if (!/\.(jpg|jpeg|png)$/i.test(file.name)) {
+                    errorMessage.innerText = 'Only JPG, PNG files are allowed.';
                     errorMessage.style.display = 'block';
                 } else {
                     errorMessage.style.display = 'none';
